# qml_tutorial

./: CMakeLists.txt  README.md  main.pro  main.qrc
inc/: main_controller.h
qml/: MyButton.qml  Style.qml  dashboard.qml  main.qml  splash.qml  workspace.qml
src/: main.cpp  main_controller.cpp
